Wrote the CSS for our character's website and changed some HtML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Powdered Toast Man</title>
 	<link rel="icon" href="img/toast-2.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -16,7 +18,8 @@
 		<h2>About Powdered Toast Man</h2>
 		<p>Powdered Toast man saves breakfast by farting on toast.</p>
 		<img src="img/toast-2.jpeg">
-		<p>Powdered Toast Man</p>
+		<p class="caption">Powdered Toast Man</p>
+
 
 		<!-- Why Powdered Toast Man Kicks ass -->
 
